docs: ✏️ update env example

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,7 @@
 #GITHUB
-GITHUB_ID="your-credential-here"
-GITHUB_SECRET="your-credential-here"
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
+#GOOGLE
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
