--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,6 @@
+#NEXTAUTH
+NEXTAUTH_SECRET=
+
 #GITHUB
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
@@ -5,3 +8,7 @@ GITHUB_CLIENT_SECRET=""
 #GOOGLE
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+#DISCORD
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
